<resources>
    <string name="app_name">Find My Bicycle</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="get_location">GET LOCATION</string>
    <string name="user_address">User Address</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="bikeBackground" />
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="EDIT">EDIT</string>
    <string name="name">Name</string>
    <string name="bicycle_name">Bicycle name</string>
    <string name="textview2">TextView</string>
    <string name="edit_bicycle">Edit Bicycle</string>
    <string name="phonenumber_displayed">phonenumber displayed</string>
    <string name="edit">EDIT</string>
    <string name="phonenumber">Phonenumber:</string>
    <string name="edit2">EDIT</string>
    <string name="edit_account_settings">Edit account settings</string>
    <string name="firstname">Firstname:</string>
    <string name="Username_displayed">firstname_displayed</string>
    <string name="edit3">EDIT</string>
    <string name="lastname">Lastname:</string>
    <string name="lastname_displayed">lastname_displayed</string>
    <string name="phonenumber2">Phonenumber:</string>
    <string name="password">Password:</string>
    <string name="name2">Name</string>
    <string name="last_name">Last Name:</string>
    <string name="user_name">User Name:</string>
    <string name="welcome2">Welcome</string>
    <string name="first_name">First Name:</string>
    <string name="name3">Name</string>
    <string name="name4">Name</string>
    <string name="returnbutton">returnButton</string>
    <string name="edit_bicycles">Edit Bicycles</string>
    <string name="textview3">TextView</string>
    <string name="add_bicycle">+Add Bicycle</string>
    <string name="show_list_of_bikes">Show list of bikes</string>
    <string name="addlocation">addLocation</string>
    <string name="findlocation">findLocation</string>
    <string name="returnbutton2">returnButton</string>
    <string name="user_name2">User Name:</string>
    <string name="password2">Password</string>
    <string name="username">Username</string>
    <string name="new_user">New User</string>
    <string name="find_my_bicycle">Find My Bicycle</string>
    <string name="password3">Password:</string>
    <string name="manage_locations">Manage Locations</string>
    <string name="manage_bike">Manage Bike</string>
    <string name="manage_account">Manage Account</string>
    <string name="number">number</string>
    <string name="submit">SUBMIT</string>
    <string name="add_location">add location</string>
    <string name="add_bike">add bike</string>
    <string name="bike_name">Bike name:</string>
    <string name="description">Description:</string>
    <string name="login">LOGIN</string>
    <string name="username_displayed">Username_displayed</string>
    <string name="password_displayed">password_displayed</string>
    <string name="bicycle_name2">Bicycle name:</string>
    <string name="optional">Optional</string>
    <string name="bikeDescription">bikeDescription</string>
    <string name="choose_bicycle_text">Choose bicycle</string>
    <string name="choose_bike_text">Choose Bike</string>
    <string name="next1">Next</string>
    <string name="coordinates">Coordinates:</string>


    <!-- Strings used for the dropdown menu of choose bicycle -->
    <string-array name="chooseBikeDropdown">
        <item>bike1</item>
        <item>bike2</item>
        <item>bike3</item>
        <item>bike4</item>
        <item>bike5</item>
    </string-array>
</resources>